Make windows-registry-util compatible with Java 9+